# cv

./: .gitignore  CLAUDE.md  SETUP.md  build-server.ps1  setup-server.ps1
cad_plugin/: CADverse.manifest  CADverse.py  extract_mesh.py  extract_meta.py
client/Assets/Script/: UIHandler.cs  UIManager.cs
client/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
client/ProjectSettings/: ProjectSettings.asset
model/: metadata.json
model/meshes/: EXPORT_shaft.mtl  base.mtl
p2p/: Cargo.toml
p2p/android-sample/: Cargo.toml  build-apk.ps1
p2p/android-sample/.cargo/: config.toml
p2p/android-sample/src/: lib.rs
p2p/core/: Cargo.toml
p2p/core/src/: h3_iroh.rs  lib.rs
p2p/sample/: Cargo.toml
p2p/sample/src/: main.rs
p2p/unity-ffi/: Cargo.toml  build-android.ps1
p2p/unity-ffi/src/: lib.rs
server/: Cargo.toml  build-server.ps1  build.rs
server/pychrono/: environment.yml  pyproject.toml
server/pychrono/simulator/: SimInfo.py  __init__.py  main.py  metadata_types.py  runtime_types.py  scene_loader.py  sim_builder.py
server/src/: client_interface.rs  main.rs  net.rs  sim.rs  utils.rs  watchdog.rs
