[package]
name = "p2p-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
iroh = "0.97"
pkarr = { version = "5", default-features = false, features = ["keys", "signed_packet"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
pbkdf2 = "0.12"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tokio-util = "0.7"
h3 = "0.0.8"
http = "1"
bytes = "1"
